--- a/dontclose.html
+++ b/dontclose.html
@@ -44,6 +44,11 @@
             color: #555;
             min-height: 1.5em; /* メッセージ表示領域を確保 */
         }
+        #brightness-display {
+            margin-top: 5px;
+            font-size: 1em;
+            color: #777;
+        }
         #splash {
             position: fixed;
             top: 0;
@@ -91,12 +96,11 @@
     </div>
 
     <p id="message">「カメラを起動」ボタンを押してください。</p>
-    <div>
+    <p id="brightness-display">輝度: ---</p> <div>
         <button id="startButton">カメラを起動</button>
         <button id="resetButton" disabled>リセット</button>
         <button id="stopButton" disabled>カメラを停止</button>
     </div>
-
 
     <div id="splash">作動！</div>
 
@@ -105,6 +109,7 @@
         const canvas = document.getElementById('overlay-canvas');
         const context = canvas.getContext('2d');
         const message = document.getElementById('message');
+        const brightnessDisplay = document.getElementById('brightness-display'); // 追加
         const splash = document.getElementById('splash');
         const startButton = document.getElementById('startButton');
         const resetButton = document.getElementById('resetButton');
@@ -119,18 +124,28 @@
 
         // 音を鳴らす関数
         function playBeep() {
+            // AudioContextがまだなければ作成（ブラウザの自動再生ポリシーを考慮）
             if (!audioContext) {
                 audioContext = new (window.AudioContext || window.webkitAudioContext)();
             }
+
+            // 既存の音源があれば停止
             if (oscillator) {
-                oscillator.stop(); // 既存の音があれば停止
+                oscillator.stop();
+                oscillator = null; // リソース解放
             }
+
             oscillator = audioContext.createOscillator();
             oscillator.type = 'sine'; // 正弦波
-            oscillator.frequency.setValueAtTime(440, audioContext.currentTime); // 440 Hz
-            oscillator.connect(audioContext.destination);
+            // より聞こえやすい周波数や、音量を調整することも可能です
+            const gainNode = audioContext.createGain(); // 音量調整ノード
+            gainNode.gain.setValueAtTime(0.3, audioContext.currentTime); // 0.3は音量 (0.0から1.0)
+            
+            oscillator.frequency.setValueAtTime(500, audioContext.currentTime); // 500 Hz (少し高め)
+            oscillator.connect(gainNode); // oscillator -> gainNode
+            gainNode.connect(audioContext.destination); // gainNode -> スピーカー
             oscillator.start();
-            oscillator.stop(audioContext.currentTime + 0.5); // 0.5秒後に停止
+            oscillator.stop(audioContext.currentTime + 0.3); // 0.3秒後に停止 (少し短め)
         }
 
         // カメラ映像の取得と表示
@@ -144,6 +159,7 @@
                     canvas.width = video.videoWidth;
                     canvas.height = video.videoHeight;
                     message.textContent = '検出待機中...';
+                    brightnessDisplay.textContent = '輝度: 検出中...';
                     detectionActive = true;
                     requestAnimationFrame(detectEyes); // 検出開始
                     startButton.disabled = true;
@@ -152,23 +168,26 @@
                 };
             } catch (err) {
                 console.error('カメラアクセスエラー:', err);
-                message.textContent = 'カメラへのアクセスを許可してください。';
+                message.textContent = 'カメラへのアクセスを許可してください。（ブラウザ上部に表示される許可ダイアログを確認してください。）';
+                brightnessDisplay.textContent = '輝度: ---';
                 startButton.disabled = false;
                 resetButton.disabled = true;
                 stopButton.disabled = true;
             }
         }
 
-        // 簡易的な目閉じ検出ロジック (非常に原始的です！)
+        // 簡易的な目閉じ検出ロジック
         function detectEyes() {
             if (!detectionActive || video.paused || video.ended) {
-                return; // 検出が非アクティブ、またはビデオが停止している場合は終了
+                return;
             }
 
             context.drawImage(video, 0, 0, canvas.width, canvas.height);
             const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
             const data = imageData.data;
 
+            // 目の領域を画像中央に固定。この値は環境によって調整が必要です。
+            // 例えば、顔検出ライブラリを使わない場合、顔がカメラの中心にくるように調整してみてください。
             const eyeRegionX = Math.floor(canvas.width * 0.3);
             const eyeRegionY = Math.floor(canvas.height * 0.4);
             const eyeRegionWidth = Math.floor(canvas.width * 0.4);
@@ -183,13 +202,20 @@
                     const r = data[index];
                     const g = data[index + 1];
                     const b = data[index + 2];
+                    // 輝度を計算 (Luma)
                     totalBrightness += (0.299 * r + 0.587 * g + 0.114 * b);
                     pixelCount++;
                 }
             }
 
             const averageBrightness = totalBrightness / pixelCount;
-            const brightnessThreshold = 70; // この値を調整して感度を変更
+            // この brightnessThreshold の値を調整してください！
+            // 目を開いている時と閉じている時の「輝度」の差を確認しながら調整するのが良いでしょう。
+            // 例えば、目を開いている時に「輝度: 100」と表示され、
+            // 目を閉じた時に「輝度: 40」と表示されたら、閾値を50〜60あたりに設定すると良いかもしれません。
+            const brightnessThreshold = 55; // デフォルトを少し下げてみました。
+
+            brightnessDisplay.textContent = `輝度: ${averageBrightness.toFixed(2)}`; // 輝度を表示
 
             const currentlyClosed = averageBrightness < brightnessThreshold;
 
@@ -207,10 +233,8 @@
                     if (detectionActive) {
                         message.textContent = '3秒間目を閉じました！作動！';
                         splash.classList.add('active');
-                        playBeep();
+                        playBeep(); // ビープ音を鳴らす
                         detectionActive = false; // 検出を停止
-                        // startButton.disabled = false; // 再度開始できるように
-                        // stopButton.disabled = true;
                     }
                 } else {
                     message.textContent = `目を閉じました。あと ${(3 - (closedDuration / 1000)).toFixed(1)}秒...`;
@@ -228,10 +252,8 @@
             isEyeClosed = false;
             closedStartTime = null;
             message.textContent = '検出待機中...';
+            brightnessDisplay.textContent = '輝度: 検出中...';
             detectionActive = true; // 検出を再開
-            // requestAnimationFrame(detectEyes); // 検出ループを再開 (既に動いている可能性があるので不要)
-            // startButton.disabled = true; // カメラが起動しているので無効
-            // stopButton.disabled = false; // カメラが起動しているので有効
         });
 
         stopButton.addEventListener('click', () => {
@@ -239,6 +261,7 @@
                 currentStream.getTracks().forEach(track => track.stop()); // 全てのトラックを停止
                 video.srcObject = null;
                 message.textContent = 'カメラが停止しました。「カメラを起動」ボタンを押してください。';
+                brightnessDisplay.textContent = '輝度: ---';
                 detectionActive = false; // 検出を停止
                 startButton.disabled = false;
                 resetButton.disabled = true;
